Changes to resume and style

--- a/Default.cshtml
+++ b/Default.cshtml
@@ -12,9 +12,12 @@
 <div>
     Probably the best way to get to know me would be through my blog at <a href="http://softwarearchaeology.blogspot.com">SoftwareArchaeology.blogspot.com</a>
 </div>
-<h3>Me as a wordcloud</h3>
-<div>I like this as much as I do my ordinary resume.  I think it says the same amount to a hiring 
+<h3 id="wordcloudHeader">Me as a wordcloud</h3>
+<div id="wordcloudText">I like this as much as I do my ordinary resume.  I think it says the same amount to a hiring 
 manager while being somewhat more... interesting.</div>
 <div id="wordcloud">
     <a href="Images/myResume.PNG"><img class="myImage" src="Images/myResume.PNG" width="680" height="405" alt="Me as a word cloud" /></a>
+</div>
+<div id="wordcloudSmall">
+    <a href="Images/myResume.PNG"><img class="myImage" src="Images/myResume_sm.PNG" width="427" height="263" alt="Me as a word cloud" /></a>
 </div>
