--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <footer>
+        <footer id="footie">
             Connect with me:
             <a href="http://www.twitter.com/kevinpdavis"><img class="connect" src="Images/twitter.png" alt="Twitter" /></a>
             <a href="http://www.linkedin.com/in/daviskevinp"><img class="connect" src="Images/linkedin.png" alt="LinkedIn"/></a>
