whole bunch of changes..  updated resume stuff.

--- a/Professional.cshtml
+++ b/Professional.cshtml
@@ -15,7 +15,7 @@
     </ul>
     My current interests in technology:
     <ul>
-        <li>I'm a core team member organizing <a href="http://www.thatconference.com">thatConference</a></li>
+        <li>I'm a core team member organizing <a href="http://www.thatconference.com">That Conference</a></li>
         <li>C#/.NET</li>
         <li>HTML 5/Javascript/CSS</li>
         <li>Data Science</li>
@@ -25,7 +25,14 @@
         <li>Continuous Integration and build tools</li>
         <li>Performing technical book reviews</li>
     </ul>
+    Presentations:
+    <ul>
+        <li><a href="tc-2013-redux.html">That Conference 2013 Overview</a></li>
+        <li><a href="http://www.slideshare.net/kevinpdavis/the-r-of-war">The R of War (LCNUG, 6/2013)</a></li>
+        <li><a href="http://www.slideshare.net/kevinpdavis">More!</a></li>
+    </ul>
 </div>
 <div>
-    This is my <a href="Documents/Kevin P. Davis - Resume - Public.pdf">Resume</a>.
+    This is my <a href="Documents/Kevin P. Davis - Resume - Public.pdf">Resume</a>
+    and my <a href="Documents/Kevin P. Davis - CV - Public.pdf">CV</a>.
 </div>
