--- a/Professional.cshtml
+++ b/Professional.cshtml
@@ -31,6 +31,11 @@
         <li><a href="http://www.slideshare.net/kevinpdavis/the-r-of-war">The R of War (LCNUG, 6/2013)</a></li>
         <li><a href="http://www.slideshare.net/kevinpdavis">More!</a></li>
     </ul>
+    Code experiments:
+    <ul>
+        <li><a href="bunch.cshtml">Little puzzle game</a></li>
+        <li><a href="CanvasDemo.html">Canvas Demo</a></li>
+    </ul>
 </div>
 <div>
     This is my <a href="Documents/Kevin P. Davis - Resume - Public.pdf">Resume</a>
