update for github and such

--- a/Professional.cshtml
+++ b/Professional.cshtml
@@ -35,6 +35,7 @@
     <ul>
         <li><a href="bunch.cshtml">Little puzzle game</a></li>
         <li><a href="CanvasDemo.html">Canvas Demo</a></li>
+        <li><a href="ColorStack.html">Color Stack</a></li>
     </ul>
 </div>
 <div>
