--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -67,6 +67,8 @@
             <a href="http://softwarearchaeology.blogspot.com"><img class="connect" src="Images/blogger.png" alt="Blogger"/></a>
             <a href="http://gamblekdavis.blogspot.com"><img class="connect" src="Images/blogger.png" alt="Blogger"/></a>
             <a href="http://gambleandrandom.blogspot.com"><img class="connect" src="Images/blogger.png" alt="Blogger"/></a>
+            <a href="http://www.slideshare.com/kevinpdavis"><img class="connect" src="Images/SlideShareIcon.jpg" alt="SlideShare"/></a>
+            <a href="http://www.github.com/daviskevinp"><img class="connect" src="Images/GitHubIcon.jpg" alt="GitHub"/></a>
         </footer>
     </body>
 </html>
